--- a/arch/x86/um/Makefile
+++ b/arch/x86/um/Makefile
@@ -9,9 +9,9 @@ else
 	BITS := 64
 endif
 
-obj-y = subarch.o host-subarch.o
+obj-y = subarch.o host.o
 
-host-subarch-y = bugs_$(BITS).o delay.o fault.o \
+host-y = bugs_$(BITS).o delay.o fault.o \
 	ptrace_$(BITS).o ptrace_user.o setjmp_$(BITS).o signal.o \
 	stub_segv.o \
 	sys_call_table_$(BITS).o sysrq_$(BITS).o tls_$(BITS).o \
@@ -19,8 +19,8 @@ host-subarch-y = bugs_$(BITS).o delay.o fault.o \
 
 ifeq ($(CONFIG_X86_32),y)
 
-host-subarch-y += syscalls_32.o
-host-subarch-$(CONFIG_ELF_CORE) += elfcore.o
+host-y += syscalls_32.o
+host-$(CONFIG_ELF_CORE) += elfcore.o
 
 subarch-y = ../lib/string_32.o ../lib/atomic64_32.o ../lib/atomic64_cx8_32.o
 subarch-y += ../lib/cmpxchg8b_emu.o ../lib/atomic64_386_32.o
@@ -29,7 +29,7 @@ subarch-y += ../kernel/sys_ia32.o
 
 else
 
-host-subarch-y += syscalls_64.o vdso/
+host-y += syscalls_64.o vdso/
 
 subarch-y = ../lib/csum-partial_64.o ../lib/memcpy_64.o \
 	../lib/memmove_64.o ../lib/memset_64.o
