--- a/arch/um/tools/Makefile
+++ b/arch/um/tools/Makefile
@@ -12,5 +12,5 @@ $(UM_DIR)/os-Linux/built-in.a:
 quiet_cmd_ld_vmlinux_arch.o = LD      $@
 	cmd_ld_vmlinux_arch.o = $(LD) ${KBUILD_LDFLAGS} -r -o $@ --whole-archive $^
 
-$(obj)/vmlinux.arch.o: $(SUBARCH_DIR)/subarch.o $(SUBARCH_DIR)/built-in.a $(UM_DIR)/os-Linux/built-in.a FORCE
+vmlinux.arch.o: $(SUBARCH_DIR)/subarch.o $(SUBARCH_DIR)/built-in.a $(UM_DIR)/os-Linux/built-in.a FORCE
 	$(call if_changed,ld_vmlinux.arch.o)
