--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
+          make ARCH=um olddefconfig
           ./tools/testing/kunit/kunit.py run
