--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,5 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
+          make ARCH=um mrproper
           make ARCH=um olddefconfig
           ./tools/testing/kunit/kunit.py run
