--- a/arch/um/Kbuild
+++ b/arch/um/Kbuild
@@ -1,3 +1,9 @@
 # SPDX-License-Identifier: GPL-2.0-only
 
-obj-y += kernel/ drivers/
+obj-y += kernel/ drivers/ subarch.o
+
+quiet_cmd_cc_subarch.o = CC      $@
+	cmd_cc_subarch.o = $(Q)$(MAKE) $(build)=$(SUBARCH_DIR) $<; cp $< $@
+
+$(obj)/subarch.o: arch/$(HEADER_ARCH)/um/subarch.o FORCE
+	$(call if_changed,cc_subarch.o)
