--- a/arch/um/Kbuild
+++ b/arch/um/Kbuild
@@ -5,5 +5,6 @@ obj-y += kernel/ drivers/ subarch.o
 quiet_cmd_cc_subarch.o = CC      $@
 	cmd_cc_subarch.o = $(Q)$(MAKE) $(build)=$(SUBARCH_DIR) $<; cp $< $@
 
+arch/$(HEADER_ARCH)/um/subarch.o: ;
 $(obj)/subarch.o: arch/$(HEADER_ARCH)/um/subarch.o FORCE
 	$(call if_changed,cc_subarch.o)
