--- a/arch/x86/um/Makefile
+++ b/arch/x86/um/Makefile
@@ -36,6 +36,9 @@ endif
 
 subarch-$(CONFIG_MODULES) += ../kernel/module.o
 
+subarch.o: $(obj)/subarch.o
+	@:
+
 USER_OBJS := bugs_$(BITS).o ptrace_user.o fault.o
 
 $(obj)/user-offsets.s: c_flags = -Wp,-MD,$(depfile) $(USER_CFLAGS) \
