--- a/arch/um/Kbuild
+++ b/arch/um/Kbuild
@@ -4,11 +4,8 @@ obj-y += kernel/ drivers/ subarch.o
 
 SUBARCH_DIR := arch/$(HEADER_ARCH)/um
 
-quiet_cmd_cc_subarch.o = CC      $@
-	cmd_cc_subarch.o = $(MAKE) $(build)=$(SUBARCH_DIR) $@
-
-$(SUBARCH_DIR)/subarch.o: FORCE
-	$(call if_changed,cc_subarch.o)
+$(SUBARCH_DIR)/subarch.o:
+	$(MAKE) $(build)=$(SUBARCH_DIR) $@
 
 $(obj)/subarch.o: $(SUBARCH_DIR)/subarch.o FORCE
 	$(call if_changed,copy)
