--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           make ARCH=um defconfig
-          make ARCH=um
+          make ARCH=um -j$(nproc)
           make ARCH=um mrproper
           ./tools/testing/kunit/kunit.py run
