--- a/arch/um/Kbuild
+++ b/arch/um/Kbuild
@@ -9,3 +9,6 @@ $(SUBARCH_DIR)/subarch.o:
 
 $(obj)/subarch.o: $(SUBARCH_DIR)/subarch.o FORCE
 	$(call if_changed,copy)
+
+# for cleaning
+subdir- += tools os-Linux
