--- a/arch/um/Makefile
+++ b/arch/um/Makefile
@@ -149,5 +149,6 @@ MRPROPER_FILES += $(HOST_DIR)/include/generated
 archclean:
 	@find . \( -name '*.bb' -o -name '*.bbg' -o -name '*.da' \
 		-o -name '*.gcov' \) -type f -print | xargs rm -f
+	$(Q)$(MAKE) $(clean)=$(HOST_DIR)
 
-export HEADER_ARCH SUBARCH USER_CFLAGS CFLAGS_NO_HARDENING DEV_NULL_PATH
+export HEADER_ARCH SUBARCH HOST_DIR USER_CFLAGS CFLAGS_NO_HARDENING DEV_NULL_PATH
