--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,5 +15,7 @@ jobs:
           make ARCH=um defconfig
           make ARCH=um -j$(nproc)
           make ARCH=um mrproper
+          make ARCH=um defconfig
           make ARCH=um V=1 -j$(nproc)
+          make ARCH=um mrproper
           ./tools/testing/kunit/kunit.py run
